Header section complete

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Landing Page</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="header"></div>
+	<div class="header">
+		<div class="header-logo">
+			Header Logo
+		</div>
+		<ul>
+			<li>header link one</li>
+			<li>header link two</li>
+			<li>header link three</li>
+		</ul>
+	</div>
 	<div class="first-section"></div>
 	<div class="second-section"></div>
 	<div class="third-section"></div>
