First section complete

--- a/index.html
+++ b/index.html
@@ -11,13 +11,25 @@
 		<div class="header-logo">
 			Header Logo
 		</div>
-		<ul>
+		<ul class="header-links">
 			<li>header link one</li>
 			<li>header link two</li>
 			<li>header link three</li>
 		</ul>
 	</div>
-	<div class="first-section"></div>
+	<div class="first-section">
+		<div class="hero">
+			<div class="hero-main">
+				This website is awesome
+			</div>
+			<div class="hero-secondary">
+				This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast
+			</div>
+			<button>Sign up</button>
+		</div>
+		<div class="placeholder-image">Image placeholder<img src=""></div>
+		
+	</div>
 	<div class="second-section"></div>
 	<div class="third-section"></div>
 	<div class="fourth-section"></div>
