Section two complete

--- a/index.html
+++ b/index.html
@@ -30,7 +30,27 @@
 		<div class="placeholder-image">Image placeholder<img src=""></div>
 		
 	</div>
-	<div class="second-section"></div>
+	<div class="second-section">
+		<div class="information-header">Some random information.</div>
+		<div class="information-container">
+			<div class="info">
+				<img class="illustration" src="img/lizard.jpg">
+				This is some subtext under an illustration or image
+			</div>
+			<div class="info">
+				<img class="illustration" src="">
+				This is some subtext under an illustration or image
+			</div>
+			<div class="info">
+				<img class="illustration" src="">
+				This is some subtext under an illustration or image
+			</div>
+			<div class="info">
+				<img class="illustration" src="">
+				This is some subtext under an illustration or image
+			</div>
+		</div>
+	</div>
 	<div class="third-section"></div>
 	<div class="fourth-section"></div>
 	<div class="footer"></div>
