--- a/index.html
+++ b/index.html
@@ -55,7 +55,15 @@
 		This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows? All I know is that it looks nice.
 		<div class="credit">-Some random</div>
 	</div>
-	<div class="fourth-section"></div>
+	<div class="fourth-section">
+		<div class="call-to-action">
+			<div class="call-to-action-header">
+				Call to action! It's time!
+			</div>
+			<div class="call-to-action-content">Sign up for our product by clicking that button right over there!</div>
+		</div>
+		<button>Sign up</button>
+	</div>
 	<div class="footer"></div>
 </body>
 </html>
