--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 		</div>
 		<button>Sign up</button>
 	</div>
-	<div class="footer"></div>
+	<div class="footer">
+		Copyright The Odin Project 2021
+	</div>
 </body>
 </html>
